@@ -690,14 +690,14 @@ scatterPlot <- function(mydata,
 
 
                       if (map && group.number == 1) {
-                          require(maps)
+                          require(mapdata)
 
                           if (extra.args$map.fill) {
-                              mp <- map(database="world", plot = FALSE, fill = TRUE)
+                              mp <- map(database="worldHires", plot = FALSE, fill = TRUE)
                               panel.polygon(mp$x, mp$y, col = extra.args$map.cols, border = "white",
                                             alpha = extra.args$map.alpha, ...)
                           } else {
-                               mp <- map(database="world", plot = FALSE)
+                               mp <- map(database="worldHires", plot = FALSE)
                                llines(mp$x, mp$y, col = "black")
 
                           }
@@ -926,14 +926,14 @@ scatterPlot <- function(mydata,
                              }
 
                              if (map) {
-                                 require(maps)
+                                 require(mapdata)
 
                                  if (extra.args$map.fill) {
-                                     mp <- map(database="world", plot = FALSE, fill = TRUE)
+                                     mp <- map(database="worldHires", plot = FALSE, fill = TRUE)
                                      panel.polygon(mp$x, mp$y, col = extra.args$map.cols, border = "white",
                                                    alpha = extra.args$map.alpha, ...)
                                  } else {
-                                     mp <- map(database="world", plot = FALSE)
+                                     mp <- map(database="worldHires", plot = FALSE)
                                      llines(mp$x, mp$y, col = "black")
 
                                  }
