@@ -44,6 +44,16 @@
 ##' e.g. \dQuote{season}, the trajectories can either be calculated for each
 ##' level of \code{type} independently or extracted after the cluster
 ##' calculations have been applied to the whole data set.
+##' @param map.fill Should the base map be a filled polygon? Default
+##' is to fill countries.
+##' @param map.cols If \code{map.fill = TRUE} \code{map.cols} controls
+##' the fill colour. Examples include \code{map.fill = "grey40"} and
+##' \code{map.fill = openColours("default", 10)}. The latter colours
+##' the countries and can help differentiate them.
+##' @param map.alpha The transpency level of the filled map which
+##' takes values from 0 (full transparency) to 1 (full
+##' opacity). Setting it below 1 can help view trajectories,
+##' trajectory surfaces etc. \emph{and} a filled base map.
 ##' @param ... Other graphical parameters passed onto
 ##' \code{lattice:levelplot} and \code{cutData}. Similarly, common
 ##' axis and title labelling options (such as \code{xlab},
